# PhantomMail

./: .bumpversion.cfg  .env.local  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENCE  README.md  langgraph.json  pyproject.toml
.github/workflows/: version-bump.yml
examples/: usage.ipynb
src/faketrix/: __init__.py  fake_transport.py  main.py  send_email.py
src/faketrix/graphs/: __init__.py  graph.py  nodes.py
src/faketrix/models/: __init__.py  transport.py
src/phantommail/: __init__.py  main.py  send_email.py
src/phantommail/assets/: customers.csv  customs_template.html
src/phantommail/examples/: customs_1_email.html  customs_1_pdf.html  customs_2_email.html  customs_2_pdf.html  order_1_email.html  order_2_email.html  order_2_pdf.html  order_3_email.html  order_3_pdf.html  order_4_email.html  order_4_pdf.html  order_5_email.html  order_5_pdf.html  order_6_email.html
src/phantommail/fakers/: __init__.py  complaint.py  declaration.py  price_request.py  question.py  random_promotional.py  transport.py  update_order.py  waiting_costs.py
src/phantommail/graphs/: __init__.py  graph.py  nodes.py  state.py
src/phantommail/helpers/: html_to_pdf.py
src/phantommail/models/: __init__.py  customs_document.py  email.py  goods.py  transport.py
tests/faketrix/: test_fake_transport.py  test_transport.py
tests/phantommail/: test_transport.py
